Solved navbar bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 
+/*
 .App {
   margin-top: 0px;
 }
@@ -10,7 +11,7 @@
 .App .container{
   align-content: center
 }
-
+*/
 *{
   box-sizing: border-box;
   margin: 0;
