--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -27,7 +27,7 @@
     text-align: center;
     width: 100%;
     justify-content: end;
-    margin-right: 2px;
+    margin-right: 10px;
 }
 
 .nav-links {
@@ -54,14 +54,14 @@
     display: none;
 }
 
-/*
+
 @media screen and (max-width: 960px) {
     .NavbarItems {
         position: relative;
     }
 
     .nav-menu {
-        display: flex;
+        display: none;
         flex-direction: column;
         width: 100%;
         height: 260px;
@@ -72,12 +72,14 @@
     }
 
     .nav-menu.active {
-        background: #74828f; 
-        left: -50px;
+        display: flex;
+        background: #74828f;
+        left: 0px;
         width: 100%;
         opacity: 1;
+        padding: 0px;
         transition: all 0.5s ease;
-        z-index: 1;
+        z-index: 0;
     }
 
     .nav-links {
@@ -137,5 +139,3 @@
         display: none;
     }
 }
-
-*/
