--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -54,14 +54,14 @@
     display: none;
 }
 
-/*
+
 @media screen and (max-width: 960px) {
     .NavbarItems {
         position: relative;
     }
 
     .nav-menu {
-        display: flex;
+        display: none;
         flex-direction: column;
         width: 100%;
         height: 260px;
@@ -72,10 +72,12 @@
     }
 
     .nav-menu.active {
+        display: flex;
         background: #74828f; 
-        left: -50px;
+        left: 0px;
         width: 100%;
         opacity: 1;
+        padding: 0;
         transition: all 0.5s ease;
         z-index: 1;
     }
@@ -138,4 +140,3 @@
     }
 }
 
-*/
