--- a/Frontend/src/Home/Home.css
+++ b/Frontend/src/Home/Home.css
@@ -18,3 +18,11 @@
     border-radius: 20px;
     padding: 60px;
 }
+
+.card {
+    background: #96c0ce;
+    width: 400px;
+    height: 50px;
+    border-radius: 50px;
+    font-size: 1.2rem;
+}
